added JavaOptions so that KryoSerialization works with Java 17 + removed some unused imports